applications/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  type: NodePort
  selector:
    app: plex
  ports:
    - port: 32400
      targetPort: plex
      nodePort: 32400
      name: plex
    - port: 32410
      targetPort: bob10
      nodePort: 32410
      name: bob10
      protocol: UDP
    - port: 32414
      targetPort: bob14
      nodePort: 32414
      name: bob14
      protocol: UDP
    - port: 32412
      targetPort: bob12
      nodePort: 32412
      name: bob12
      protocol: UDP
    - port: 32413
      targetPort: bob13
      nodePort: 32413
      name: bob13
      protocol: UDP
#    - port: 8324
#      targetPort: bob8
#      nodePort: 8324
#      name: bob8
