applications/plex/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: plex
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: plex.joshaconnor.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: plex
                port: 
                  number: 32400
